# project_course_es

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
src/navigation/: CMakeLists.txt  package.xml
src/navigation/cfg/: rviz_navigation.rviz
src/navigation/launch/: robot_carlike.launch  robot_carlike_in_stage.launch
src/navigation/scripts/: odometry_agent.py  odometry_agent1.py  odometry_agent2.py
src/simulation/: CMakeLists.txt  package.xml
src/simulation/gazebo_sim/: CMakeLists.txt  package.xml
src/simulation/gazebo_sim/launch/: sim.launch
src/simulation/launch/: hello.launch
src/simulation/robot/: CMakeLists.txt  package.xml
src/simulation/robot/config/: control.yaml
src/simulation/robot/launch/: control.launch  robot.launch
src/simulation/robot/src/: twist_to_ackermann.cpp
src/simulation/robot/urdf/: _robot_.xacro  gem.xacro  robot.gazebo  robot.xacro  robot3.xacro  robot_2.xacro
src/simulation/worlds/: hello.world
